--- a/healify/package.json
+++ b/healify/package.json
@@ -18,6 +18,7 @@
     "reactstrap": "^8.10.0",
     "web-vitals": "^1.1.2"
   },
+  "proxy": "http://localhost5000",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
