--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "node index.js",
+    "start2": "nodemon index.js",
+    "heroku-postbuild": "cd healify && npm install --only=dev && npm install && npm run build"
   },
   "keywords": [],
   "author": "",
@@ -17,11 +19,11 @@
     "express-async-errors": "^3.1.1",
     "http-status-codes": "^2.1.4",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.0.11"
+    "mongoose": "^6.0.11",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
     "concurrently": "^6.3.0",
-    "cors": "^2.8.5",
     "nodemon": "^2.0.14"
   }
 }
