--- a/Server/package.json
+++ b/Server/package.json
@@ -17,7 +17,8 @@
     "express-async-errors": "^3.1.1",
     "http-status-codes": "^2.1.4",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.0.11"
+    "mongoose": "^6.0.11",
+    "save-dev": "^0.0.1-security"
   },
   "devDependencies": {
     "concurrently": "^6.3.0",
