--- a/healify/package.json
+++ b/healify/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "audio-react-recorder": "^1.0.4",
     "axios": "^0.23.0",
     "bootstrap": "^5.1.3",
     "chart.js": "^3.5.1",
