--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "express-async-errors": "^3.1.1",
     "http-status-codes": "^2.1.4",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.0.11"
+    "mongoose": "^6.0.11",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.14"
