--- a/healify/package.json
+++ b/healify/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.23.0",
     "bootstrap": "^5.1.3",
     "chart.js": "^3.5.1",
+    "emailjs-com": "^3.2.0",
     "mdb-react-ui-kit": "^1.4.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-rc.1",
