--- a/healify/package.json
+++ b/healify/package.json
@@ -16,6 +16,7 @@
     "mdb-react-ui-kit": "^1.4.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-rc.1",
+    "react-calendar": "^3.5.0",
     "react-chartjs-2": "^3.1.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
