--- a/healify/package.json
+++ b/healify/package.json
@@ -24,6 +24,8 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "reactstrap": "^8.10.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.4",
     "web-vitals": "^1.1.2"
   },
   "proxy": "http://localhost:5000",
