--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 PORT=5000
 MONGO_URI='mongodb+srv://db1:db1@clustermain.3n8a9.mongodb.net/healify_main?retryWrites=true&w=majority'
 JWT_SECRET='Thisismysecretstringidontifitsgoodenough'
+CLOUD_NAME='doisktifs'
+CLOUD_API_KEY=451722258236935 
+CLOUD_API_SECRET='Ry7-Zq5VaA45NA5gm1-mutROaHo'
