--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
-    "http-status-codes": "^2.1.4",
     "express-fileupload": "^1.2.1",
+    "http-status-codes": "^2.1.4",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.11",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.4",
+    "sendmail": "^1.6.1",
     "validator": "^13.7.0"
   },
   "devDependencies": {
