--- a/healify/package.json
+++ b/healify/package.json
@@ -14,6 +14,7 @@
     "chart.js": "^3.5.1",
     "emailjs-com": "^3.2.0",
     "mdb-react-ui-kit": "^1.4.0",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-rc.1",
     "react-calendar": "^3.5.0",
