--- a/healify/package.json
+++ b/healify/package.json
@@ -21,6 +21,7 @@
     "react-chartjs-2": "^3.1.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-paginate": "^8.0.0",
     "react-read-more-read-less": "^1.0.7",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
